nohup.out
  File "/home/zphinx/Moderskeppet/bot.py", line 28
    await bot.say("```css\n" + maten.getText().rstrip().lstrip()) + "``
                                                                      ^
SyntaxError: EOL while scanning string literal
  File "/home/zphinx/Moderskeppet/bot.py", line 28
    await bot.say("```css\n" + maten.getText().rstrip().lstrip()) + "``
                                                                      ^
SyntaxError: EOL while scanning string literal
  File "/home/zphinx/Moderskeppet/bot.py", line 28
    await bot.say("```css\n" + maten.getText().rstrip().lstrip()) + "```")
                                                                         ^
SyntaxError: invalid syntax
Inloggad som: Bengt
Traceback (most recent call last):
  File "/usr/local/lib/python3.6/site-packages/discord/gateway.py", line 430, in poll_event
    msg = yield from self.recv()
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 319, in recv
    raise ConnectionClosed(self.close_code, self.close_reason)
websockets.exceptions.ConnectionClosed: WebSocket connection is closed: code = 1006, no reason.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/usr/local/lib/python3.6/site-packages/discord/client.py", line 448, in connect
    yield from self.ws.poll_event()
  File "/usr/local/lib/python3.6/site-packages/discord/gateway.py", line 435, in poll_event
    raise ResumeWebSocket() from e
discord.gateway.ResumeWebSocket

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/zphinx/Moderskeppet/bot.py", line 143, in <module>
    bot.run(TOKEN)
  File "/usr/local/lib/python3.6/site-packages/discord/client.py", line 519, in run
    self.loop.run_until_complete(self.start(*args, **kwargs))
  File "/usr/local/lib/python3.6/asyncio/base_events.py", line 468, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.6/site-packages/discord/client.py", line 491, in start
    yield from self.connect()
  File "/usr/local/lib/python3.6/site-packages/discord/client.py", line 452, in connect
    self.ws = yield from DiscordWebSocket.from_client(self, resume=resume)
  File "/usr/local/lib/python3.6/site-packages/discord/gateway.py", line 207, in from_client
    timeout=60, loop=client.loop)
  File "/usr/local/lib/python3.6/asyncio/tasks.py", line 358, in wait_for
    return fut.result()
  File "/usr/local/lib/python3.6/site-packages/discord/gateway.py", line 65, in _ensure_coroutine_connect
    ws = yield from websockets.connect(gateway, loop=loop, klass=klass)
  File "/usr/local/lib/python3.6/site-packages/websockets/py35/client.py", line 19, in __await__
    return (yield from self.client)
  File "/usr/local/lib/python3.6/site-packages/websockets/client.py", line 210, in connect
    factory, wsuri.host, wsuri.port, **kwds)
  File "/usr/local/lib/python3.6/asyncio/base_events.py", line 804, in create_connection
    sock, protocol_factory, ssl, server_hostname)
  File "/usr/local/lib/python3.6/asyncio/base_events.py", line 830, in _create_connection_transport
    yield from waiter
  File "/usr/local/lib/python3.6/asyncio/selector_events.py", line 727, in _read_ready
    data = self._sock.recv(self.max_size)
ConnectionResetError: [Errno 54] Connection reset by peer
Task exception was never retrieved
future: <Task finished coro=<WebSocketCommonProtocol.run() done, defined at /usr/local/lib/python3.6/site-packages/websockets/protocol.py:428> exception=ConnectionResetError(54, 'Connection reset by peer')>
Traceback (most recent call last):
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 434, in run
    msg = yield from self.read_message()
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 456, in read_message
    frame = yield from self.read_data_frame(max_size=self.max_size)
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 511, in read_data_frame
    frame = yield from self.read_frame(max_size)
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 546, in read_frame
    self.reader.readexactly, is_masked, max_size=max_size)
  File "/usr/local/lib/python3.6/site-packages/websockets/framing.py", line 86, in read_frame
    data = yield from reader(2)
  File "/usr/local/lib/python3.6/asyncio/streams.py", line 674, in readexactly
    yield from self._wait_for_data('readexactly')
  File "/usr/local/lib/python3.6/asyncio/streams.py", line 464, in _wait_for_data
    yield from self._waiter
  File "/usr/local/lib/python3.6/asyncio/selector_events.py", line 727, in _read_ready
    data = self._sock.recv(self.max_size)
ConnectionResetError: [Errno 54] Connection reset by peer
Unclosed client session
client_session: <aiohttp.client.ClientSession object at 0xdc8095335f8>
Task exception was never retrieved
future: <Task finished coro=<WebSocketCommonProtocol.run() done, defined at /usr/local/lib/python3.6/site-packages/websockets/protocol.py:428> exception=ConnectionResetError(54, 'Connection reset by peer')>
Traceback (most recent call last):
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 434, in run
    msg = yield from self.read_message()
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 456, in read_message
    frame = yield from self.read_data_frame(max_size=self.max_size)
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 511, in read_data_frame
    frame = yield from self.read_frame(max_size)
  File "/usr/local/lib/python3.6/site-packages/websockets/protocol.py", line 546, in read_frame
    self.reader.readexactly, is_masked, max_size=max_size)
  File "/usr/local/lib/python3.6/site-packages/websockets/framing.py", line 86, in read_frame
    data = yield from reader(2)
  File "/usr/local/lib/python3.6/asyncio/streams.py", line 674, in readexactly
    yield from self._wait_for_data('readexactly')
  File "/usr/local/lib/python3.6/asyncio/streams.py", line 464, in _wait_for_data
    yield from self._waiter
  File "/usr/local/lib/python3.6/asyncio/selector_events.py", line 727, in _read_ready
    data = self._sock.recv(self.max_size)
ConnectionResetError: [Errno 54] Connection reset by peer
